views/site/recess.styl
page-width = 972px
link-color = #36c
container-padding = 4px
top-content-width =  642px

transition()
    -webkit-transition arguments
    -moz-transition arguments
    -o-transition arguments
    transition arguments

rounded-image()
        img
            border-radius 4px
            -webkit-box-shadow 0px 0px 4px #999
            -webkit-transition box-shadow 0.25s linear
        a.hover:hover img
            -webkit-box-shadow 0px 0px 4px black

container-vertical-spacing = 23px

body section > #recess
    .rounded-hover
        h2
            transition(color, 0.25s, linear)
        :hover
            h2
                color link-color
    rounded-image()
        img
            border-radius 4px
            -webkit-box-shadow 0px 0px 4px #999
            -webkit-transition box-shadow 0.25s linear
        a.hover:hover img
            -webkit-box-shadow 0px 0px 4px black

    top-content-full()
        width top-content-width
        .rounded
            width (top-content-width - (container-padding * 2))

    p.teaser
        color #444
    .top
        > .main
            width 476px
            float left
            .rounded-hover
                h2
                    font-size 1.3em
                height 370px
                img
                    width 470px
        > .right
            float right
            
            .medium-rectangle .content-container
                width 250px
            .container
                margin-bottom 19px
            .column
                float left
                width 256px
            .column.first
                margin-right 20px
                width 200px
                .block .rounded-hover
                    height 176px
                    width 192px
                    padding 0px


                    h2
                        font-size 1.2em
                        margin-top 135px
                        line-height 1.3em
                        height 44px
                        position absolute
                        width 192px
                    img
                        width 186px
                        display block
                        border-radius 4px
                    p.teaser
                        display none

            .blog .rounded
                height 90px


    .bottom > .row
        > div
            float left
            .container.block
                float left
                margin-right 20px

                .rounded-hover
                    width 222px
                    height 182px

                    h2
                        font-size 1.2em
                        margin-bottom 5px
                    p.teaser
                        color #444
                        line-height 1.3em
                        font-size 1em
                    img
                        width 70px
                        height 70px
                        float right
        > .last > .container.block
                margin-right 0px
    .multimedia
        .rounded-hover
            width 966px
            .element
                float left
                margin-right 8px
            .element.last
                margin-right 0px

